--- a/src/app/besic-info/besic-info.component.html
+++ b/src/app/besic-info/besic-info.component.html
@@ -13,7 +13,7 @@
         </li>
         <li class="list-item">
             <i class="bi bi-envelope py-2">
-            <a href="mailto:anasansariaka47@gmail.com" class="px-2 text-white-50">anasansariaka47@gmail.com</a>   
+            <a href="mailto:anasansariaka@gmail.com" class="px-2" target="_blank">anasansariaka@gmail.com</a>  
             </i>
         </li>
         <li class="list-item">
