--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="containor p-5">
     <div class="row">
         <div class="col-lg-4 bg-dark text-white text-center py-4">
-             <app-besic-info></app-besic-info>      
+             <app-besic-info></app-besic-info>  
+             <app-skills></app-skills>    
         </div>
         <div class="col-lg-8 bg-light text-dark py-4 px-5">
            
