--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
     <div class="row">
         <div class="col-lg-4 bg-dark text-white text-center py-4">
              <app-besic-info></app-besic-info>  
-             <app-skills></app-skills>    
+             <app-skills></app-skills>   
+             <app-language></app-language> 
         </div>
         <div class="col-lg-8 bg-light text-dark py-4 px-5">
            
