--- a/src/app/besic-info/besic-info.component.html
+++ b/src/app/besic-info/besic-info.component.html
@@ -1,5 +1,5 @@
 <div class="header-left">
-    <img src="profile.jpg" alt="" class="img-thumbnail rounded-circle mb-2">
+    <img src="./assets/profile.jpg" alt="img" class=" img  mb-2">
     <h1 class="display-5">MOHD ANAS</h1>
     <h4 class="lead text-uppercase text-white-50 mb-4">Javascript Developer</h4>
 </div>
