--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
              <app-language></app-language> 
         </div>
         <div class="col-lg-8 bg-light text-dark py-4 px-5">
-           
+           <app-about-me></app-about-me>
             
         </div>
     </div>
