--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,14 @@
              <app-skills></app-skills>   
              <app-language></app-language> 
         </div>
+        
         <div class="col-lg-8 bg-light text-dark py-4 px-5">
+            
            <app-about-me></app-about-me>
+           <br>
+           <app-education></app-education>
+           <br>
+           <app-personal-info></app-personal-info>
             
         </div>
     </div>
